# reps

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  hello.py  plan.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: api_entrypoint_review.md  gepa_implementation_plan.md  objective_api_spec.md  optimizer_engine_separation_spec.md  packaging_spec.md  python_api_spec.md  readme_spec.md  release_runbook.md  release_spec.md  test_skip_spec.md
docs/history/: 2026-04-21-tool-calling-worker-primitive-design.md  README.md
examples/: README.md  basic_optimizer.py  llm_judge.py  reuse_model.py  rich_evaluator.py
examples/custom_benchmark/: README.md  config.yaml  evaluator.py  initial_program.py  system_prompt.md
experiment/: dspy_vs_reps_gsm8k.py  run_experiment.sh  visualize.py
experiment/configs/: base.yaml  binpack_opus47_anthropic.yaml  circle_base.yaml  circle_gpt54_reps.yaml  circle_kimi26_reps.yaml  circle_opus47_anthropic.yaml  circle_opus47_n32.yaml  circle_opus47_openrouter.yaml  circle_opus_anthropic.yaml  circle_opus_reps.yaml  circle_reps.yaml  circle_sonnet46_openrouter.yaml  circle_sonnet_base.yaml  circle_sonnet_reps.yaml  push_sota_opus.yaml  push_sota_sonnet.yaml  reps_full.yaml  smoke_openrouter.yaml  test_anthropic_smoke.yaml  verify_anthropic_tool_runner.yaml  verify_anthropic_tool_runner_sonnet.yaml  verify_anthropic_tool_runner_sonnet_gpt.yaml  verify_dspy_react.yaml  verify_openai_tool_runner.yaml  verify_openai_tool_runner_gpt55.yaml  verify_single_call.yaml
openevolve/: pyproject.toml
openevolve/openevolve/: controller.py  (+1 more)
reps/: __init__.py  async_utils.py  config.py  contract_selector.py  controller.py  convergence_monitor.py  database.py  embedding.py  evaluation_result.py  evaluator.py  interpret.py  iteration_config.py  metrics_logger.py  minibatch.py  novelty_judge.py  pareto.py  program_summarizer.py  prompt_sampler.py  prompt_templates.py  reflection_engine.py  runner.py  runtime.py  sanitize.py  trace_reflection.py  utils.py  worker_pool.py
tests/: test_api_example.py  test_api_lm.py  test_api_model.py  test_api_objective.py  test_api_objective_dspy.py  test_api_objective_integration.py  test_api_optimize.py  test_api_prompt_objective.py  test_circle_packing_asi.py  test_config.py  test_controller.py  test_database_persistence.py  test_edit_serializer.py  test_evaluation_contract.py  test_interpret.py  test_island_isolation.py  test_lineage_reflection.py  test_llm_providers.py  test_merge_integration.py  test_minibatch.py  test_minibatch_adversarial.py  test_minibatch_archive.py  test_minibatch_archive_adversarial.py  test_minibatch_evaluator.py  test_minibatch_evaluator_adversarial.py  test_pareto.py  test_pareto_integration.py  test_prompt_sampler.py  test_reps_features.py  test_runner.py  test_runtime_llm.py  test_sanitize.py  test_tool_runners.py  test_trace_reflection.py  test_trace_reflection_integration.py  test_utils.py  test_worker_pool.py
(+772 files in other folders)
